--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div><!-- txt-topo-site -->
 
                     <div class="img-topo-site">
-                        <img width="250px" height="290" src="img/9.jpg" alt="Foto da Emanuelle Ávila">
+                        <img width="250px" height="290" src="img/Design sem nome.jpg" alt="Foto da Emanuelle Ávila">
                     </div><!-- IMAGEM-PRINCIPAL -->
                 </div><!-- flex -->
             </div><!-- interface -->
