--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@
                     </div><!--IMG-SOBRE-->
                     <div class="txt-sobre">
                         <h2>MUITO PRAZER, <span>SOU EMANUELLE ÁVILA</span></h2>
-                        <p>Tenho 20 anos de idade, moro em Porto Alegre, capital do Rio Grande do Sul.</p>
-                        <p>Sou formada em Técnico de Administração e acadêmica de Análise e Desenvolvimento de Dados na
-                            faculdade Uníntese onde estou iniciando no ramo de programação em busca de avanço na área
-                            profissional.</p>
+                        <p>Tenho 22 anos de idade, moro em Alvorada, região metropolitana do Rio Grande do Sul.</p>
+                        <p>Profissional em desenvolvimento na área de Tecnologia da Informação, com experiência administrativa e conhecimentos técnicos em linguagens de programação, gestão de processos e análise de dados. Atualmente cursando Análise e Desenvolvimento de Sistemas, buscando aplicar habilidades adquiridas em programação, implementação de soluções e suporte tecnológico para contribuir com projetos inovadores e de alto desempenho.</p>
                         <div class="btn-social">
                             <a href="https://github.com/Manu21avila" target="_blank"><button><i
                                         class="bi bi-github"></i></i></button></a>
