--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="txt-topo-site">
                         <h1>OBTENHA O FUTURO HOJE<span>.</span></h1>
                         <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante,
-                            funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença
+                            funcionalidade intuitiva e otimização para resultados, estou pronta para criar a presença
                             online dos seus sonhos.</p>
                         <!-- Sobre-mim -->
                         <div class="btn-contato">
