--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
 
                     <input type="hidden" name="accessKey" value="b5f25119-6c1e-45d6-b7c2-f2fa5bcc5ee7">
-                    <input type="hidden" name="redirectTo" value="file:///C:/Users/cleni/OneDrive/Documentos/GitHub/escola-de-programadores/obrigado.html">
+                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:3000/obrigado.html">
                 </form><!--FORM ACTION-->
             </div><!-- CONTAINER -->
         </section><!-- ENTRE EM CONTATO -->
