--- a/obrigado.html
+++ b/obrigado.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-<<<<<<< HEAD
-    
-    <title>Emanuelle Ávila</title>
-=======
-    <title>Document</title>
->>>>>>> escola/main
-</head>
-<body class="main">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Emanuelle Ávila Bairros</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="main">
     <h1 class="text">Obrigado pelo contato</h1>
     <p class="paragrafo">Em breve entrarei em contato!</p>
+
     <a href="index.html" class="btn">HOME</a>
-</body>
+  </body>
 </html>
