fix: correção estrutural HTML e CSS

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           class="card project"
         >
           <img src="img/18.jpg" />
-          <h3>Sistema de Bairros</h3>
+          <h3>Portifólio</h3>
         </a>
       </div>
     </section>
