feat: melhoria visual do carrossel de projetos + modal interativo

--- a/index.html
+++ b/index.html
@@ -103,18 +103,78 @@
 
     <!-- PROJETOS -->
 
-    <section id="portfolio" class="container">
-      <h2 class="section-title">Projetos</h2>
+    <section id="projetos">
+      <div class="container">
+        <h2 class="section-title">Projetos</h2>
 
-      <div class="cards">
-        <a
-          href="https://github.com/Manu21avila/PORTIFOLIO-EMANUELLE-AVILA-BAIRROS"
-          target="_blank"
-          class="card project"
-        >
-          <img src="img/18.jpg" />
-          <h3>Portifólio</h3>
-        </a>
+        <div class="carousel-wrapper">
+          <button class="arrow left" onclick="scrollProjects(-1)">
+            &#10094;
+          </button>
+
+          <div class="carousel" id="carousel">
+            <!-- PROJETO 1 -->
+            <div
+              class="project-card"
+              onclick="
+                openModal(
+                  'Sistema de Bairros',
+                  'Projeto web para gerenciamento e organização de bairros com interface responsiva.',
+                  'HTML • CSS • JavaScript',
+                  'img/18.jpg',
+                  'https://github.com/Manu21avila/PORTIFOLIO-EMANUELLE-AVILA-BAIRROS',
+                )
+              "
+            >
+              <img src="img/18.jpg" />
+              <h3>Sistema de Bairros</h3>
+              <p>Ver detalhes</p>
+            </div>
+
+            <!-- PROJETO 2 -->
+            <div
+              class="project-card"
+              onclick="
+                openModal(
+                  'Portfólio Web',
+                  'Site pessoal responsivo publicado com GitHub Pages.',
+                  'HTML • CSS',
+                  'img/20.jpg',
+                  'https://github.com/Manu21avila',
+                )
+              "
+            >
+              <img src="img/20.jpg" />
+              <h3>Portfólio Web</h3>
+              <p>Ver detalhes</p>
+            </div>
+
+            <!-- PROJETO 3 -->
+            <div
+              class="project-card"
+              onclick="
+                openModal(
+                  'Projeto Front-End',
+                  'Experimentos de layout e responsividade.',
+                  'HTML • CSS • JS',
+                  'img/10.jpg',
+                  'https://github.com/Manu21avila',
+                )
+              "
+            >
+              <img src="img/10.jpg" />
+              <h3>Projeto Front-End</h3>
+              <p>Ver detalhes</p>
+            </div>
+          </div>
+
+          <button class="arrow right" onclick="scrollProjects(1)">
+            &#10095;
+          </button>
+        </div>
+
+        <!-- DOTS (AGORA NO LUGAR CERTO) -->
+        <div class="carousel-dots" id="dots"></div>
       </div>
     </section>
 
@@ -139,5 +199,113 @@
     <footer>
       <p>© 2026 — Emanuelle Ávila Bairros</p>
     </footer>
+
+    <script>
+      const carousel = document.getElementById("carousel");
+      const cards = document.querySelectorAll(".project-card");
+      const dotsContainer = document.getElementById("dots");
+
+      let autoScroll;
+      let index = 0;
+
+      /* ===== CRIAR DOTS ===== */
+
+      cards.forEach((_, i) => {
+        const dot = document.createElement("span");
+
+        dot.addEventListener("click", () => {
+          index = i;
+          updateCarousel();
+        });
+
+        dotsContainer.appendChild(dot);
+      });
+
+      const dots = dotsContainer.querySelectorAll("span");
+
+      /* ===== ATUALIZA POSIÇÃO ===== */
+
+      function updateCarousel() {
+        const cardWidth = cards[0].offsetWidth + 20;
+
+        carousel.scrollTo({
+          left: index * cardWidth,
+          behavior: "smooth",
+        });
+
+        dots.forEach((d) => d.classList.remove("active"));
+        dots[index].classList.add("active");
+      }
+
+      /* ===== SETAS ===== */
+
+      function scrollProjects(direction) {
+        index += direction;
+
+        if (index < 0) index = cards.length - 1;
+        if (index >= cards.length) index = 0;
+
+        updateCarousel();
+      }
+
+      /* ===== AUTO SCROLL ===== */
+
+      function startAutoScroll() {
+        autoScroll = setInterval(() => {
+          index++;
+          if (index >= cards.length) index = 0;
+          updateCarousel();
+        }, 3500);
+      }
+
+      carousel.addEventListener("mouseenter", () => clearInterval(autoScroll));
+      carousel.addEventListener("mouseleave", startAutoScroll);
+
+      /* ===== INIT ===== */
+
+      updateCarousel();
+      startAutoScroll();
+    </script>
+
+    <script>
+      function openModal(title, desc, tech, img, link) {
+        document.getElementById("modalTitle").innerText = title;
+        document.getElementById("modalDesc").innerText = desc;
+        document.getElementById("modalTech").innerText = tech;
+        document.getElementById("modalImg").src = img;
+        document.getElementById("modalLink").href = link;
+
+        document.getElementById("projectModal").style.display = "flex";
+      }
+
+      function closeModal() {
+        document.getElementById("projectModal").style.display = "none";
+      }
+
+      // Fechar clicando fora
+      window.onclick = function (e) {
+        if (e.target.id === "projectModal") {
+          closeModal();
+        }
+      };
+    </script>
+
+    <!-- MODAL PROJETOS -->
+
+    <div id="projectModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+
+        <img id="modalImg" />
+
+        <h2 id="modalTitle"></h2>
+
+        <p id="modalDesc"></p>
+
+        <p class="tech" id="modalTech"></p>
+
+        <a id="modalLink" class="btn" target="_blank"> Ver no GitHub </a>
+      </div>
+    </div>
   </body>
 </html>
