fix: restauração do formulário + correção do carousel

--- a/index.html
+++ b/index.html
@@ -183,16 +183,24 @@
     <section id="contato" class="container contato">
       <h2 class="section-title">Contato</h2>
 
+      <form class="contact-form" action="obrigado.html">
+        <input type="text" placeholder="Seu nome" required />
+        <input type="email" placeholder="Seu email" required />
+        <textarea placeholder="Sua mensagem..." required></textarea>
+
+        <button type="submit" class="btn">Enviar</button>
+      </form>
+
       <div class="social">
         <a href="https://github.com/Manu21avila"
           ><i class="bi bi-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/emanuelle-sd-%C3%A1vila/"
-          ><i class="bi bi-linkedin"></i
-        ></a>
-        <a href="mailto:emanuelle.flash@gmail.com"
-          ><i class="bi bi-envelope"></i
-        ></a>
+        <a href="https://www.linkedin.com/in/emanuelle-sd-%C3%A1vila/">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="mailto:emanuelle.flash@gmail.com">
+          <i class="bi bi-envelope"></i>
+        </a>
       </div>
     </section>
 
