feat: melhoria visual do carrossel de projetos + modal interativo

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <a href="https://www.linkedin.com/in/emanuelle-sd-%C3%A1vila/">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="mailto:emanuelle.flash@gmail.com">
-          <i class="bi bi-envelope"></i>
+        <a href="https://www.instagram.com/manu_avila.21/" target="_blank">
+          <i class="bi bi-instagram"></i>
         </a>
       </div>
     </section>
