--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Portfólio profissional de Emanuelle Ávila Bairros — Analista de Sistemas"
     />
 
-    <link rel="icon" href="img/19-ico.ico" />
+    <link rel="icon" href="img/19-ico.ico" alt="Ícone da marca"/>
 
     <!-- Google Fonts -->
 
@@ -67,7 +67,7 @@
         </a>
       </div>
 
-      <img src="img/20.jpg" class="hero-img" />
+      <img src="img/20.jpg" class="hero-img" alt="Foto de Emanuelle Ávila" />
     </section>
 
     <!-- SKILLS -->
@@ -88,7 +88,7 @@
     <!-- SOBRE -->
 
     <section id="sobre" class="container sobre">
-      <img src="img/10.jpg" />
+      <img src="img/10.jpg" alt="Foto de Emanuelle Ávila"/>
 
       <div>
         <h2>Sobre mim</h2>
@@ -103,7 +103,7 @@
 
     <!-- PROJETOS -->
 
-    <section id="projetos">
+    <a href="#projetos">Projetos</a>
       <div class="container">
         <h2 class="section-title">Projetos</h2>
 
@@ -126,7 +126,7 @@
                 )
               "
             >
-              <img src="img/18.jpg" />
+              <img src="img/18.jpg" alt="Demonstrator Projeto 1"/>
               <h3>Sistema de Bairros</h3>
               <p>Ver detalhes</p>
             </div>
@@ -144,7 +144,7 @@
                 )
               "
             >
-              <img src="img/20.jpg" />
+              <img src="img/20.jpg" alt="Demonstrator Projeto 2"/>
               <h3>Portfólio Web</h3>
               <p>Ver detalhes</p>
             </div>
@@ -162,7 +162,7 @@
                 )
               "
             >
-              <img src="img/10.jpg" />
+              <img src="img/10.jpg" alt="Demonstrator Projeto 3"/>
               <h3>Projeto Front-End</h3>
               <p>Ver detalhes</p>
             </div>
@@ -192,10 +192,10 @@
       </form>
 
       <div class="social">
-        <a href="https://github.com/Manu21avila"
+        <a href="https://github.com/Manu21avila" target="_blank">
           ><i class="bi bi-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/emanuelle-sd-%C3%A1vila/">
+        <a href="https://www.linkedin.com/in/emanuelle-sd-%C3%A1vila/" target="_blank">
           <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/manu_avila.21/" target="_blank">
@@ -295,7 +295,7 @@
         if (e.target.id === "projectModal") {
           closeModal();
         }
-      };
+      }
     </script>
 
     <!-- MODAL PROJETOS -->
