fix: criação e style do menu responsivo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       <div class="container nav">
         <h2>Emanuelle Ávila Bairros</h2>
 
+        <!-- Botão Menu Mobile -->
+        <div id="btn-menu" class="btn-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
         <nav>
           <a href="#inicio">Início</a>
           <a href="#skills">Skills</a>
@@ -315,5 +322,18 @@
         <a id="modalLink" class="btn" target="_blank"> Ver no GitHub </a>
       </div>
     </div>
+
+    <!-- Menu Mobile -->
+    <div id="menu-mobile" class="menu-mobile">
+      <nav>
+        <a href="#inicio">Início</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#contato">Contato</a>
+      </nav>
+    </div>
+
+    <div id="overlay-menu" class="overlay-menu"></div>
+
   </body>
 </html>
